{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "0a92f5d8-8be0-451a-a244-6d3495a97b7a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "62762fa8-622a-4609-b6e3-a14dfb85a190",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementDpad",
                    "type": "Value",
                    "id": "a08770f6-6908-4d36-9674-f6f18ad205ef",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b35204f-a5e7-49c4-b55c-c32e9ce8106b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25ffcf1a-1e77-4641-b895-3a967fe6803e",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementDpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interactions",
            "id": "629ff90e-f3a9-4186-bc64-8fcb02525f44",
            "actions": [
                {
                    "name": "Grab",
                    "type": "Value",
                    "id": "595f2798-21fe-4a8b-a1c5-2b7381504224",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "PassThrough",
                    "id": "b2ea643a-87f0-4982-b2f3-05cd0abf415f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Value",
                    "id": "e351b320-13d8-4e19-a810-17379f625022",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab238732-cdda-4aa4-84cd-f0005643f516",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ad69d3b-8456-4d9d-b5cd-372adc5a4f0e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b0e228f-59dd-49cd-84a0-2965b7ad276c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}